# Bino

./: .gitignore  CMakeLists.txt  Readme.md  build.sh  run.sh
config/: camera_config.json
docker/: Dockerfile  docker-compose.yaml  docker_dependencies.sh
include/Bino/App/: MainWindow.hpp
include/Bino/Camera/: CameraManager.hpp  DepthAIStereoCamera.hpp
scripts/: build.sh  init.sh
src/: main.cpp
src/App/: MainWindow.cpp
src/Camera/: CameraManager.cpp
tools/: test_camera_connectivity.cpp
